# stratego

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
stratego-lib/: board.hpp  piece.hpp
